--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
           class="absolute w-full h-1/2 top-0 right-0 p-4 text-center space-y-8 lg:space-y-0 lg:space-x-3 lg:static lg:w-auto flex flex-col bg-gray-800 rounded-lg border border-gray-100 items-center lg:bg-transparent lg:border-0 lg:flex-row justify-center">
           <li><a href="./index.html"
               class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover">Home</a></li>
+          <li><a href="./blog.html"
+                class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover">Blogs</a></li>
           <li><a href="./donate.html"
               class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover">Donate
               Animals</a></li>
