Updated the New Logo and added the new logo as the favicon.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="./introSection.css">
   <title>PetMe</title>
+  <link rel="FavIcon" type="image/png" href="Assets/Images/newlogo.png">
 </head>
 
 <body>
@@ -16,7 +17,7 @@
     class=" text-gray-400 bg-header-offwhite body-font flex flex-row items-center justify-center lg:justify-around">
     <div class="flex flex-col items-center md:flex-row md:items-center p-5">
       <a class="logo-border" href="#">
-        <img class="rounded-full logo-size" src="./Assets/Images/logo.jpg" alt="logo" />
+        <img class="rounded-full logo-size" src="./Assets/Images/newlogo.jpg" alt="logo" />
       </a>
       <!-- 
       <div class="w-full mt-8 md:mt-0">
@@ -476,7 +477,7 @@
   <footer class="footer text-gray-400 bg-gray-900 body-font flex justify-center">
       <div class="container flex pl-10 p-5 items-center">
         <a class="flex-auto grow-[0] pr-[25px]" href="#">
-          <img class="rounded-full w-[80px] h-[80px]" src="./Assets/Images/logo.jpg" alt="logo" />
+          <img class="rounded-full w-[80px] h-[80px]" src="./Assets/Images/newlogo.jpg" alt="logo" />
         </a>
         <div class="flex flex-col justify-start flex-auto grow-[2]">
           <span class="text-4xl text-gray-100 pb-[8px]">Adopt today</span>
