style pet card layout

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="./output.css">
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="./introSection.css">
+  <link rel="stylesheet" href="./mobileView.css">
   <title>PetMe</title>
 </head>
 
@@ -103,7 +104,7 @@
         <div class="main-text">
           <div class="p-4 flex flex-col gap-2">
             <h5 class="text-gray-900 md:text-[40px] font-bold mb-2 text-center">Bongo</h5>
-            <ul class=" grid sm:grid-cols-2 gap-5">
+            <ul class=" grid grid-cols-2 gap-5">
               <li class=" flex gap-2 text-xl justify-self-center">
                 <img class=" w-5 h-auto" src="Assets/Images/dog-icon.svg" alt="">
                 <span>Dog</span>
@@ -143,7 +144,7 @@
         <div class="main-text">
           <div class="p-4 flex flex-col gap-2">
             <h5 class="text-gray-900 md:text-[40px] font-bold mb-2 text-center">Roblet</h5>
-            <ul class=" grid sm:grid-cols-2 gap-5">
+            <ul class=" grid grid-cols-2 gap-5">
               <li class=" flex gap-2 text-xl justify-self-center">
                 <img class=" w-5 h-auto" src="Assets/Images/dog-icon.svg" alt="">
                 <span>Dog</span>
@@ -185,7 +186,7 @@
         <div class="main-text">
           <div class="p-4 flex flex-col gap-2">
             <h5 class="text-gray-900 md:text-[40px] font-bold mb-2 text-center">Sipper</h5>
-            <ul class=" grid sm:grid-cols-2 gap-5">
+            <ul class=" grid grid-cols-2 gap-5">
               <li class=" flex gap-2 text-xl justify-self-center">
                 <img class=" w-5 h-auto" src="Assets/Images/dog-icon.svg" alt="">
                 <span>Dog</span>
@@ -225,7 +226,7 @@
         <div class="main-text">
           <div class="p-4 flex flex-col gap-2">
             <h5 class="text-gray-900 md:text-[40px] font-bold mb-2 text-center">Russia</h5>
-            <ul class=" grid sm:grid-cols-2 gap-5">
+            <ul class=" grid grid-cols-2 gap-5">
               <li class=" flex gap-2 text-xl justify-self-center">
                 <img class=" w-5 h-auto" src="Assets/Images/cat.png" alt="">
                 <span>Cat</span>
@@ -267,7 +268,7 @@
         <div class="main-text">
           <div class="p-4 flex flex-col gap-2">
             <h5 class="text-gray-900 md:text-[40px] font-bold mb-2 text-center">Zombo</h5>
-            <ul class=" grid sm:grid-cols-2 gap-5">
+            <ul class=" grid grid-cols-2 gap-5">
               <li class=" flex gap-2 text-xl justify-self-center">
                 <img class=" w-5 h-auto" src="Assets/Images/cat.png" alt="">
                 <span>Cat</span>
@@ -307,7 +308,7 @@
         <div class="main-text">
           <div class="p-4 flex flex-col gap-2">
             <h5 class="text-gray-900 md:text-[40px] font-bold mb-2 text-center">Riksy</h5>
-            <ul class=" grid sm:grid-cols-2 gap-5">
+            <ul class=" grid grid-cols-2 gap-5">
               <li class=" flex gap-2 text-xl justify-self-center">
                 <img class=" w-5 h-auto" src="Assets/Images/rabbit.png" alt="">
                 <span>Rabbit</span>
@@ -349,7 +350,7 @@
         <div class="main-text">
           <div class="p-4 flex flex-col gap-2">
             <h5 class="text-gray-900 md:text-[40px] font-bold mb-2 text-center">Sheru</h5>
-            <ul class=" grid sm:grid-cols-2 gap-5">
+            <ul class=" grid grid-cols-2 gap-5">
               <li class=" flex gap-2 text-xl justify-self-center">
                 <img class=" w-5 h-auto" src="Assets/Images/dog-icon.svg" alt="">
                 <span>Dog</span>
@@ -390,7 +391,7 @@
         <div class="main-text">
           <div class="p-4 flex flex-col gap-2">
             <h5 class="text-gray-900 md:text-[40px] font-bold mb-2 text-center">Swaggy</h5>
-            <ul class=" grid sm:grid-cols-2 gap-5">
+            <ul class=" grid grid-cols-2 gap-5">
               <li class=" flex gap-2 text-xl justify-self-center">
                 <img class=" w-5 h-auto" src="Assets/Images/dog-icon.svg" alt="">
                 <span>Dog</span>
