fix mobile view

--- a/index.html
+++ b/index.html
@@ -458,9 +458,9 @@
 
   <!--     Contact us section html ends here -->
       
-   <!--Contributors section -->
+  <!--Contributors section -->
 
-   <div class="contributors-container">
+  <div class="contributors-container">
     <h1>Our Contributors</h1>
     <div class="contributors" id="contributors" >
     </div>
@@ -468,11 +468,11 @@
     <button class="contribute-btn"> 
       <img src="Assets/Images/github-icon.png" alt="GitHub">
       Contribute </button></a>
-   </div>
+  </div>
 
-   <!-- Contributors section ends -->
+  <!-- Contributors section ends -->
   
-       <!-- Footer section  -->
+      <!-- Footer section  -->
 
   <footer class="footer text-gray-400 bg-gray-900 body-font flex justify-center">
       <div class="container flex pl-10 p-5 items-center">
@@ -493,7 +493,7 @@
           <button  class="bg-red-500 hover:bg-red-700 text-white font-bold py-1 px-2 mt-1 rounded" type="submit">Subscibe</button> 
         </div>  
       </div>
-      <div class="container flex justify-center items-center ">
+      <div id="social-container" class="container flex justify-center items-center ">
         <a href="#" class=" w-10 ml-3">
           <img src="Assets/Images/facebook-icon.png" alt="">
         </a>
