--- a/donate.html
+++ b/donate.html
@@ -25,6 +25,7 @@
       <a href="./index.html" class="mr-5 hover:text-white">Home</a>
       <a href="./donate.html" class="mr-5 hover:text-white">Donate Animals</a>
       <a href="./reportstary.html" class="mr-5 hover:text-white">Emergency Report</a>
+      <a href="./about us.html" class="mr-5 hover:text-white">About Us</a>
       <a href="./index.html#contact">
         <button
           class="inline-flex items-center bg-gray-800 border-0 py-1 px-3 focus:outline-none hover:bg-gray-700 rounded text-base mt-4 md:mt-0">Contact
