--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
               Animals</a></li>
           <li><a href="./reportstary.html" class="p-3 text-white font-bold hover:underline underline-offset-4">SOS
               Report</a></li>
+          <li><a href="./about us.html" class="p-3 text-white font-bold hover:underline underline-offset-4">About Us</a></li>
           <li><a href="#contact">
               <button
                 class="inline-flex items-center bg-blue-200 hover:bg-blue-100 border-0 py-4 px-2 focus:outline-none text-gray-800 font-bold rounded text-base mt-4 md:mt-0">
