--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
           <li><a href="./reportstary.html"
               class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover">SOS
               Report</a></li>
+            <li><a href="#About"
+              class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover">About Us</a></li>  
           <li><a href="#contact">
               <button
                 class="inline-flex items-center bg-header-orange-light border-0 py-4 px-2 focus:outline-none text-gray-800 font-bold rounded text-base mt-4 md:mt-0">
@@ -700,6 +702,18 @@
     </div>
   </section>
 
+  <!-- About session  html starts from here --> 
+
+
+  <section class="bg-white dark:bg-gray-900">
+    <div class="py-8 lg:py-16 px-4 mx-auto max-w-screen-md">
+      <p id="About"></p>
+        <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-center text-gray-900 dark:text-white">About Us</h2>
+      <p class="mb-8 lg:mb-16 font-light text-center text-gray-500 dark:text-gray-400 sm:text-xl">A Platform that allows animals to be adopted, donated to pet lovers, and provides emergency medical care to stray animals in need. This Platform also provide significant  features like <b>Animal Adoption</b>, <b>Pet Donation</b>. Also provides <b>SOS report</b> for stray animal in harsh conditions they can fill out the details and a representative will reach the location to assist the animal with medical aid.</p>
+   </div>
+  </section>
+
+<!-- About Us section  html ends here -->
 
 
   <!--     Contact us section html starts from here -->
