Fixed Navbar in Mobile View

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <header
     class=" text-gray-400 bg-header-offwhite body-font flex flex-row items-center justify-center lg:justify-around">
-    <div class="flex flex-col items-center md:flex-row md:items-center p-5">
+    <div class="flex flex-col items-center md:flex-row md:items-center p-5" id="logo">
       <a class="logo-border" href="#">
         <img class="rounded-full logo-size" src="./Assets/Images/logo.jpg" alt="logo" />
       </a>
@@ -40,7 +40,7 @@
     <nav class="">
       <div class="hidden w-full lg:block z-0" id="navbar">
         <ul
-          class="absolute w-full h-1/2 top-0 right-0 p-4 text-center space-y-8 lg:space-y-0 lg:space-x-3 lg:static lg:w-auto flex flex-col bg-gray-800 rounded-lg border border-gray-100 items-center lg:bg-transparent lg:border-0 lg:flex-row justify-center">
+          class="w-[100vw] h-1/2 top-0 right-0 p-4 text-center space-y-8 lg:space-y-0 lg:space-x-3 lg:static lg:w-auto flex flex-col rounded-lg border border-gray-100 items-center lg:bg-transparent lg:border-0 lg:flex-row justify-center">
           <li><a href="./index.html"
               class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover">Home</a></li>
           <li><a href="#About"
