update light-dark-theme for new styles

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               Report</a></li>
           <li><a href="#contact">
               <button
-                class="inline-flex items-center bg-header-orange-light border-0 py-4 px-2 focus:outline-none text-gray-800 font-bold rounded text-base mt-4 md:mt-0">
+                class="inline-flex items-center bg-header-orange-light border-0 py-4 px-2 focus:outline-none text_4 font-bold rounded text-base mt-4 md:mt-0">
                 Contact Us
                 <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                   class="w-4 h-4 ml-1" viewBox="0 0 24 24">
@@ -110,7 +110,7 @@
         </div>
         <div class="main-text">
           <div class="p-4 flex flex-col gap-2">
-            <h5 class="text-gray-900 md:text-[40px] font-bold mb-2 text-center">Bongo</h5>
+            <h5 class="text_3  md:text-[40px] font-bold mb-2 text-center">Bongo</h5>
             <ul class=" grid sm:grid-cols-2 gap-5">
               <li class=" flex gap-2 text-xl justify-self-center">
                 <img class=" w-5 h-auto" src="Assets/Images/dog-icon.svg" alt="">
@@ -150,7 +150,7 @@
         </div>
         <div class="main-text">
           <div class="p-4 flex flex-col gap-2">
-            <h5 class="text-gray-900 md:text-[40px] font-bold mb-2 text-center">Roblet</h5>
+            <h5 class="text_3  md:text-[40px] font-bold mb-2 text-center">Roblet</h5>
             <ul class=" grid sm:grid-cols-2 gap-5">
               <li class=" flex gap-2 text-xl justify-self-center">
                 <img class=" w-5 h-auto" src="Assets/Images/dog-icon.svg" alt="">
@@ -192,7 +192,7 @@
         </div>
         <div class="main-text">
           <div class="p-4 flex flex-col gap-2">
-            <h5 class="text-gray-900 md:text-[40px] font-bold mb-2 text-center">Sipper</h5>
+            <h5 class="text_3  md:text-[40px] font-bold mb-2 text-center">Sipper</h5>
             <ul class=" grid sm:grid-cols-2 gap-5">
               <li class=" flex gap-2 text-xl justify-self-center">
                 <img class=" w-5 h-auto" src="Assets/Images/dog-icon.svg" alt="">
@@ -232,7 +232,7 @@
         </div>
         <div class="main-text">
           <div class="p-4 flex flex-col gap-2">
-            <h5 class="text-gray-900 md:text-[40px] font-bold mb-2 text-center">Russia</h5>
+            <h5 class="text_3  md:text-[40px] font-bold mb-2 text-center">Russia</h5>
             <ul class=" grid sm:grid-cols-2 gap-5">
               <li class=" flex gap-2 text-xl justify-self-center">
                 <img class=" w-5 h-auto" src="Assets/Images/cat.png" alt="">
@@ -274,7 +274,7 @@
         </div>
         <div class="main-text">
           <div class="p-4 flex flex-col gap-2">
-            <h5 class="text-gray-900 md:text-[40px] font-bold mb-2 text-center">Zombo</h5>
+            <h5 class="text_3  md:text-[40px] font-bold mb-2 text-center">Zombo</h5>
             <ul class=" grid sm:grid-cols-2 gap-5">
               <li class=" flex gap-2 text-xl justify-self-center">
                 <img class=" w-5 h-auto" src="Assets/Images/cat.png" alt="">
@@ -314,7 +314,7 @@
         </div>
         <div class="main-text">
           <div class="p-4 flex flex-col gap-2">
-            <h5 class="text-gray-900 md:text-[40px] font-bold mb-2 text-center">Riksy</h5>
+            <h5 class="text_3  md:text-[40px] font-bold mb-2 text-center">Riksy</h5>
             <ul class=" grid sm:grid-cols-2 gap-5">
               <li class=" flex gap-2 text-xl justify-self-center">
                 <img class=" w-5 h-auto" src="Assets/Images/rabbit.png" alt="">
@@ -356,7 +356,7 @@
         </div>
         <div class="main-text">
           <div class="p-4 flex flex-col gap-2">
-            <h5 class="text-gray-900 md:text-[40px] font-bold mb-2 text-center">Sheru</h5>
+            <h5 class="text_3  md:text-[40px] font-bold mb-2 text-center">Sheru</h5>
             <ul class=" grid sm:grid-cols-2 gap-5">
               <li class=" flex gap-2 text-xl justify-self-center">
                 <img class=" w-5 h-auto" src="Assets/Images/dog-icon.svg" alt="">
@@ -397,7 +397,7 @@
         </div>
         <div class="main-text">
           <div class="p-4 flex flex-col gap-2">
-            <h5 class="text-gray-900 md:text-[40px] font-bold mb-2 text-center">Swaggy</h5>
+            <h5 class="text_3  md:text-[40px] font-bold mb-2 text-center">Swaggy</h5>
             <ul class=" grid sm:grid-cols-2 gap-5">
               <li class=" flex gap-2 text-xl justify-self-center">
                 <img class=" w-5 h-auto" src="Assets/Images/dog-icon.svg" alt="">
@@ -435,26 +435,26 @@
 
   <!--     Contact us section html starts from here -->
 
-  <section class="bg-white dark:bg-gray-900">
+  <section class="b_1 dark:bg-gray-900">
     <div class="py-8 lg:py-16 px-4 mx-auto max-w-screen-md">
       <p id="contact"></p>
-        <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-center text-gray-900 dark:text-white">Contact Us</h2>
-        <p class="mb-8 lg:mb-16 font-light text-center text-gray-500 dark:text-gray-400 sm:text-xl">Got a technical issue? Have a suggession? Need details about our platform? Any other doubts? Let us know.</p>
+        <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-center text_3  dark:text-white">Contact Us</h2>
+        <p class="mb-8 lg:mb-16 font-light text-center text_4 sm:text-xl">Got a technical issue? Have a suggession? Need details about our platform? Any other doubts? Let us know.</p>
         <form action="https://formspree.io/f/xayaokzl" class="space-y-8" method="post" id="contact_form">
           <div class="relative z-0 mb-6 w-full group">
-            <input type="text" name="name" id="contact_name" class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer" placeholder=" " required />
+            <input type="text" name="name" id="contact_name" class="block py-2.5 px-0 w-full text-sm text_3  bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer" placeholder=" " required />
             <label for="contact_name" class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:left-0 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Name</label>
           </div>
             <div class="relative z-0 mb-6 w-full group">
-              <input type="email" name="email" id="contact_email" class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer" placeholder=" " required />
+              <input type="email" name="email" id="contact_email" class="block py-2.5 px-0 w-full text-sm text_3  bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer" placeholder=" " required />
               <label for="contact_email" class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:left-0 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Email Address</label>
           </div>
           <div class="relative z-0 mb-6 w-full group">
-            <input type="text" name="subject" id="contact_subject" class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer" placeholder=" " required />
+            <input type="text" name="subject" id="contact_subject" class="block py-2.5 px-0 w-full text-sm text_3  bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer" placeholder=" " required />
             <label for="contact_subject" class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:left-0 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Subject</label>
         </div>
           <div class="relative z-0 mb-6 w-full group">
-            <textarea type="text" rows="3" name="message" id="message" class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer" placeholder=" " required ></textarea>
+            <textarea type="text" rows="3" name="message" id="message" class="block py-2.5 px-0 w-full text-sm text_3  bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer" placeholder=" " required ></textarea>
             <label for="message" class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:left-0 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Message</label>
         </div>
             <button id="contact_form_button" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Submit</button>
