--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
  <!-- About session  html starts from here --> 
 
 
-  <section class="bg-white dark:bg-gray-900">
+  <section class="bg-white dark:bg-gray-900 b_1">
     <div class="py-8 lg:py-16 px-4 mx-auto max-w-screen-md">
       <p id="About"></p>
-        <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-center text-gray-900 dark:text-white">About Us</h2>
-      <p class="mb-8 lg:mb-16 font-light text-center text-gray-500 dark:text-gray-400 sm:text-xl">A Platform that allows animals to be adopted, donated to pet lovers, and provides emergency medical care to stray animals in need. This Platform also provide significant  features like <b>Animal Adoption</b>, <b>Pet Donation</b>. Also provides <b>SOS report</b> for stray animal in harsh conditions they can fill out the details and a representative will reach the location to assist the animal with medical aid.</p>
+        <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-center text-gray-900 dark:text-white text_3">About Us</h2>
+      <p class="mb-8 lg:mb-16 font-light text-center text-gray-500 dark:text-gray-400 sm:text-xl text_4">A Platform that allows animals to be adopted, donated to pet lovers, and provides emergency medical care to stray animals in need. This Platform also provide significant  features like <b>Animal Adoption</b>, <b>Pet Donation</b>. Also provides <b>SOS report</b> for stray animal in harsh conditions they can fill out the details and a representative will reach the location to assist the animal with medical aid.</p>
    </div>
   </section>
 
