change pet details text color on dark mode

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <div class="main-text">
           <div class="p-4 flex flex-col gap-2">
             <h5 class="text_3  md:text-[40px] font-bold mb-2 text-center">Bongo</h5>
-            <ul class=" grid sm:grid-cols-2 gap-5">
+            <ul class=" grid sm:grid-cols-2 gap-5 text_4">
               <li class=" flex gap-2 text-xl justify-self-center">
                 <img class=" w-5 h-auto" src="Assets/Images/dog-icon.svg" alt="">
                 <span>Dog</span>
@@ -167,7 +167,7 @@
         <div class="main-text">
           <div class="p-4 flex flex-col gap-2">
             <h5 class="text_3  md:text-[40px] font-bold mb-2 text-center">Roblet</h5>
-            <ul class=" grid sm:grid-cols-2 gap-5">
+            <ul class=" grid sm:grid-cols-2 gap-5 text_4">
               <li class=" flex gap-2 text-xl justify-self-center">
                 <img class=" w-5 h-auto" src="Assets/Images/dog-icon.svg" alt="">
                 <span>Dog</span>
@@ -209,7 +209,7 @@
         <div class="main-text">
           <div class="p-4 flex flex-col gap-2">
             <h5 class="text_3  md:text-[40px] font-bold mb-2 text-center">Sipper</h5>
-            <ul class=" grid sm:grid-cols-2 gap-5">
+            <ul class=" grid sm:grid-cols-2 gap-5 text_4">
               <li class=" flex gap-2 text-xl justify-self-center">
                 <img class=" w-5 h-auto" src="Assets/Images/dog-icon.svg" alt="">
                 <span>Dog</span>
@@ -249,7 +249,7 @@
         <div class="main-text">
           <div class="p-4 flex flex-col gap-2">
             <h5 class="text_3  md:text-[40px] font-bold mb-2 text-center">Russia</h5>
-            <ul class=" grid sm:grid-cols-2 gap-5">
+            <ul class=" grid sm:grid-cols-2 gap-5 text_4">
               <li class=" flex gap-2 text-xl justify-self-center">
                 <img class=" w-5 h-auto" src="Assets/Images/cat.png" alt="">
                 <span>Cat</span>
@@ -291,7 +291,7 @@
         <div class="main-text">
           <div class="p-4 flex flex-col gap-2">
             <h5 class="text_3  md:text-[40px] font-bold mb-2 text-center">Zombo</h5>
-            <ul class=" grid sm:grid-cols-2 gap-5">
+            <ul class=" grid sm:grid-cols-2 gap-5 text_4">
               <li class=" flex gap-2 text-xl justify-self-center">
                 <img class=" w-5 h-auto" src="Assets/Images/cat.png" alt="">
                 <span>Cat</span>
@@ -331,7 +331,7 @@
         <div class="main-text">
           <div class="p-4 flex flex-col gap-2">
             <h5 class="text_3  md:text-[40px] font-bold mb-2 text-center">Riksy</h5>
-            <ul class=" grid grid-cols-2 gap-5">
+            <ul class=" grid grid-cols-2 gap-5 text_4">
               <li class=" flex gap-2 text-xl justify-self-center">
                 <img class=" w-5 h-auto" src="Assets/Images/rabbit.png" alt="">
                 <span>Rabbit</span>
@@ -373,7 +373,7 @@
         <div class="main-text">
           <div class="p-4 flex flex-col gap-2">
             <h5 class="text_3  md:text-[40px] font-bold mb-2 text-center">Sheru</h5>
-            <ul class=" grid sm:grid-cols-2 gap-5">
+            <ul class=" grid sm:grid-cols-2 gap-5 text_4">
               <li class=" flex gap-2 text-xl justify-self-center">
                 <img class=" w-5 h-auto" src="Assets/Images/dog-icon.svg" alt="">
                 <span>Dog</span>
@@ -414,7 +414,7 @@
         <div class="main-text">
           <div class="p-4 flex flex-col gap-2">
             <h5 class="text_3  md:text-[40px] font-bold mb-2 text-center">Swaggy</h5>
-            <ul class=" grid grid-cols-2 gap-5">
+            <ul class=" grid grid-cols-2 gap-5 text_4">
               <li class=" flex gap-2 text-xl justify-self-center">
                 <img class=" w-5 h-auto" src="Assets/Images/dog-icon.svg" alt="">
                 <span>Dog</span>
