--- a/index light.html
+++ b/index light.html
@@ -12,10 +12,12 @@
 
 <body>
   <header class=" text-gray-400 bg-blue-300 body-font flex flex-row items-center justify-center lg:justify-around">
-    <div class="flex flex-col items-center md:flex-row md:items-center p-5">
+    <div class="flex flex-row items-center md:flex-row md:items-center p-5">
+      <span class="mission-L1"> Saving Lives </span>
       <a class="w-32" href="#">
         <img class="rounded-full" src="./Assets/Images/logo.jpg" alt="logo" />
       </a>
+      <span class="mission-L2"> Saving Animals </span>
 
       <div class="w-full mt-8 md:mt-0">
         <h1 class="text-4xl text-blue-600 text-center md:text-left md:ml-12 uppercase font-serif font-bold ">Adopt
