--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
 <body>
   <header
     class=" text-gray-400 bg-header-offwhite body-font flex flex-row items-center justify-center lg:justify-around">
-    <div class="flex flex-col items-center md:flex-row md:items-center p-5" id="logo">
+    <div class="flex flex-row items-center md:flex-row md:items-center p-5" id="logo">
+      <span class="mission-1"> Saving Lives </span>
       <a class="logo-border" href="#">
         <img class="rounded-full logo-size" src="./Assets/Images/logo.jpg" alt="logo" />
       </a>
+      <span class="mission-2"> Saving Animals </span>
       <!-- 
       <div class="w-full mt-8 md:mt-0">
         <h1 class="text-4xl text_2  text-center md:text-left md:ml-12 uppercase font-serif font-bold " id = "heading-adopt-me">Adopt
