--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
   
       <!-- Footer section  -->
 
-  <footer class="bg-[#F6EFE9] p-5 text-black dark:text-white grid grid-cols-1 lg:grid-cols-3 justify-items-center">
+  <footer class="bg-gray-900 p-5 text-black dark:text-white grid grid-cols-1 lg:grid-cols-3 justify-items-center">
 
     <div>
       
