Added GitHub Logo in contributors section

--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
     </div>
     <a href="https://github.com/akshitagupta15june/PetMe" target="_blank">
     <button class="contribute-btn"> 
-      <img src="Assets/Images/github-icon.png" alt="GitHub">
+      <img src="Assets/Images/github-icon.svg" alt="GitHub">
       Contribute </button></a>
   </div>
 
