changed the logo of cat dog rabbit and location to white

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <h5 class="text_3  md:text-[40px] font-bold mb-2 text-center">Bongo</h5>
             <ul class=" grid sm:grid-cols-2 gap-5 text_4">
               <li class=" flex gap-2 text-xl justify-self-center">
-                <img class=" w-5 h-auto" src="Assets/Images/dog-icon.svg" alt="">
+                <img class=" w-5 h-auto" src="Assets/Images/dog-icon.png" alt="">
                 <span>Dog</span>
               </li>
               <li class=" flex text-xl justify-self-center">
@@ -147,7 +147,7 @@
                 <span>Brown</span>
               </li>
               <li class=" flex gap-2 text-xl justify-self-center">
-                <img class=" w-5 h-auto" src="Assets/Images/loation-icon.svg" alt="">
+                <img class=" w-5 h-auto" src="Assets/Images/loation-icon.png" alt="">
                 <span>Delhi</span>
               </li>
             </ul>
@@ -171,7 +171,7 @@
             <h5 class="text_3  md:text-[40px] font-bold mb-2 text-center">Roblet</h5>
             <ul class=" grid sm:grid-cols-2 gap-5 text_4">
               <li class=" flex gap-2 text-xl justify-self-center">
-                <img class=" w-5 h-auto" src="Assets/Images/dog-icon.svg" alt="">
+                <img class=" w-5 h-auto" src="Assets/Images/dog-icon.png" alt="">
                 <span>Dog</span>
               </li>
               <li class=" flex text-xl justify-self-center">
@@ -187,7 +187,7 @@
                 <span>Brown</span>
               </li>
               <li class=" flex gap-2 text-xl justify-self-center">
-                <img class=" w-5 h-auto" src="Assets/Images/loation-icon.svg" alt="">
+                <img class=" w-5 h-auto" src="Assets/Images/loation-icon.png" alt="">
                 <span>Lucknow</span>
               </li>
             </ul>
@@ -213,7 +213,7 @@
             <h5 class="text_3  md:text-[40px] font-bold mb-2 text-center">Sipper</h5>
             <ul class=" grid sm:grid-cols-2 gap-5 text_4">
               <li class=" flex gap-2 text-xl justify-self-center">
-                <img class=" w-5 h-auto" src="Assets/Images/dog-icon.svg" alt="">
+                <img class=" w-5 h-auto" src="Assets/Images/dog-icon.png" alt="">
                 <span>Dog</span>
               </li>
               <li class=" flex text-xl justify-self-center">
@@ -229,7 +229,7 @@
                 <span>Brown</span>
               </li>
               <li class=" flex gap-2 text-xl justify-self-center">
-                <img class=" w-5 h-auto" src="Assets/Images/loation-icon.svg" alt="">
+                <img class=" w-5 h-auto" src="Assets/Images/loation-icon.png" alt="">
                 <span>Kashmir</span>
               </li>
             </ul>
@@ -269,7 +269,7 @@
                 <span>White</span>
               </li>
               <li class=" flex gap-2 text-xl justify-self-center">
-                <img class=" w-5 h-auto" src="Assets/Images/loation-icon.svg" alt="">
+                <img class=" w-5 h-auto" src="Assets/Images/loation-icon.png" alt="">
                 <span>Karnataka</span>
               </li>
             </ul>
@@ -311,7 +311,7 @@
                 <span>White</span>
               </li>
               <li class=" flex gap-2 text-xl justify-self-center">
-                <img class=" w-5 h-auto" src="Assets/Images/loation-icon.svg" alt="">
+                <img class=" w-5 h-auto" src="Assets/Images/loation-icon.png" alt="">
                 <span>Kanpur</span>
               </li>
             </ul>
@@ -351,7 +351,7 @@
                 <span>White</span>
               </li>
               <li class=" flex gap-2 text-xl justify-self-center">
-                <img class=" w-5 h-auto" src="Assets/Images/loation-icon.svg" alt="">
+                <img class=" w-5 h-auto" src="Assets/Images/loation-icon.png" alt="">
                 <span>Kashmir</span>
               </li>
             </ul>
@@ -377,7 +377,7 @@
             <h5 class="text_3  md:text-[40px] font-bold mb-2 text-center">Sheru</h5>
             <ul class=" grid sm:grid-cols-2 gap-5 text_4">
               <li class=" flex gap-2 text-xl justify-self-center">
-                <img class=" w-5 h-auto" src="Assets/Images/dog-icon.svg" alt="">
+                <img class=" w-5 h-auto" src="Assets/Images/dog-icon.png" alt="">
                 <span>Dog</span>
               </li>
               <li class=" flex text-xl justify-self-center">
@@ -393,7 +393,7 @@
                 <span>Black</span>
               </li>
               <li class=" flex gap-2 text-xl justify-self-center">
-                <img class=" w-5 h-auto" src="Assets/Images/loation-icon.svg" alt="">
+                <img class=" w-5 h-auto" src="Assets/Images/loation-icon.png" alt="">
                 <span>Kolkata</span>
               </li>
             </ul>
@@ -418,7 +418,7 @@
             <h5 class="text_3  md:text-[40px] font-bold mb-2 text-center">Swaggy</h5>
             <ul class=" grid grid-cols-2 gap-5 text_4">
               <li class=" flex gap-2 text-xl justify-self-center">
-                <img class=" w-5 h-auto" src="Assets/Images/dog-icon.svg" alt="">
+                <img class=" w-5 h-auto" src="Assets/Images/dog-icon.png" alt="">
                 <span>Dog</span>
               </li>
               <li class=" flex text-xl justify-self-center">
@@ -434,7 +434,7 @@
                 <span>White</span>
               </li>
               <li class=" flex gap-2 text-xl justify-self-center">
-                <img class=" w-5 h-auto" src="Assets/Images/loation-icon.svg" alt="">
+                <img class=" w-5 h-auto" src="Assets/Images/loation-icon.png" alt="">
                 <span>Kashmir</span>
               </li>
             </ul>
