added icon to title bar

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="./introSection.css">
   <link rel="stylesheet" href="./mobileView.css">
+  <link rel="icon" type="image/x-icon" href="/Assets/Images/logo.ico">
   <title>PetMe</title>
 </head>
 
